[package]
name = "rpi-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = { version = "0.4", default-features = false }
env_logger = "0.11"
linux-embedded-hal = "0.4.0"
# rppal = "0.17.1"
sths34pf80 = "0.1"

anyhow = "1.0.75"


